[gd_scene load_steps=18 format=3 uid="uid://ch6hy4i8qrbvn"]

[ext_resource type="Texture2D" uid="uid://diuq3mgiji50s" path="res://assets/pong_board.png" id="1_onpd3"]
[ext_resource type="Script" path="res://scripts/Game.gd" id="2_aro7b"]
[ext_resource type="Script" path="res://scripts/Ball.gd" id="3_vworl"]
[ext_resource type="Script" path="res://scripts/CPU.gd" id="4_7ci15"]
[ext_resource type="AudioStream" uid="uid://b5aw3p5orr5fu" path="res://assets/ball_bounce.mp3" id="4_il82l"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="5_kwly5"]
[ext_resource type="PackedScene" uid="uid://o3f21qe43x8p" path="res://scenes/player_movement.tscn" id="5_uxfgj"]
[ext_resource type="Script" path="res://scripts/Quit.gd" id="8_xhbmp"]
[ext_resource type="AudioStream" uid="uid://oe0mguna6387" path="res://assets/player1wins.mp3" id="9_nlvc1"]
[ext_resource type="AudioStream" uid="uid://ct51foub8wfn2" path="res://assets/player2wins.mp3" id="10_fwydq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4m2n"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf85k"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q8me"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ds6r4"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsd77"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on37a"]
size = Vector2(56, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ovfh"]
size = Vector2(56, 648)

[node name="Game" type="Sprite2D"]
texture = ExtResource("1_onpd3")
offset = Vector2(576, 324)
script = ExtResource("2_aro7b")

[node name="Ball" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("3_vworl")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_t4m2n")

[node name="CollisionSound" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource("4_il82l")
bus = &"SFX"

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -28)
shape = SubResource("RectangleShape2D_bf85k")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_4q8me")

[node name="Player2OrCPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_7ci15")

[node name="ColorRect" type="ColorRect" parent="Player2OrCPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2OrCPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_ds6r4")

[node name="PlayerMovement" parent="Player2OrCPU" instance=ExtResource("5_uxfgj")]

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("5_kwly5")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_gsd77")

[node name="PlayerMovement" parent="Player" instance=ExtResource("5_uxfgj")]

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-28, 324)
shape = SubResource("RectangleShape2D_on37a")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1180, 324)
shape = SubResource("RectangleShape2D_7ovfh")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinnerLabel" type="Label" parent="HUD"]
visible = false
offset_left = 261.0
offset_top = 200.0
offset_right = 893.0
offset_bottom = 384.0
theme_override_colors/font_color = Color(0.678431, 0.690196, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Player 2 Wins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="Button" parent="HUD"]
offset_left = 521.0
offset_top = 5.0
offset_right = 632.0
offset_bottom = 49.0
text = "Quit to Menu
"
script = ExtResource("8_xhbmp")

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WinSounds" type="Node" parent="."]

[node name="PlayerOneWinsSound" type="AudioStreamPlayer" parent="WinSounds"]
stream = ExtResource("9_nlvc1")
bus = &"SFX"

[node name="PlayerTwoWinsSound" type="AudioStreamPlayer" parent="WinSounds"]
stream = ExtResource("10_fwydq")
bus = &"SFX"

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="pressed" from="HUD/Quit" to="HUD/Quit" method="_on_pressed"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
